simple-service/templates/frontend-deploy.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-pod

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-pod

    spec:
      containers:
        - name: frontend-container
          image: centkanayo10/frontend:2.0.0
          ports:
            - containerPort: 80
