simple-service/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Values.backend.name } }
  labels:
    chart: { { .Values.backend.labels } }
spec:
  type: { { .Values.backend.type } }
  ports:
    - port: { { .Values.backend.externalPort } }
      targetPort: { { .Values.backend.internalPort } }
      protocol: TCP
      name: { { .Values.backend.name } }
  selector:
    chart: { { .Values.backend.name } }
