simple-service/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Values.frontend.name } }
  labels:
    chart: { { .Values.frontend.labels } }
spec:
  type: { { .Values.frontend.type } }
  ports:
    - port: { { .Values.frontend.externalPort } }
      targetPort: { { .Values.frontend.internalPort } }
      protocol: TCP
      name: { { .Values.frontend.name } }
  selector:
    chart: { { .Values.frontend.labels } }
