simple-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: talent.co
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
